# ai-trading

./: DEPLOYMENT_NON_TECHNICAL.md  DEPLOYMENT_TECHNICAL.md  LICENSE  README.md  docker-compose.yml  run_system.ps1  sync.ps1  test_openai.py  verify_llm_adapter.py
architecture/: system_design.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  check_key_simple.py  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  trading_platform.db  vercel.json  vercel_entry.py  verify_openai.py  verify_rotation.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_users.py
backend/docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md
backend/src/: test_connections.py  verify_api.py
backend/src/app/: __init__.py  config.py  dependencies.py  main.py
backend/src/app/adapters/inbound/rest/: routers.py
backend/src/app/adapters/inbound/ws/: __init__.py
backend/src/app/adapters/outbound/: event_bus.py
backend/src/app/adapters/outbound/broker/: __init__.py  dhan.py  shoonya.py  zerodha.py
backend/src/app/adapters/outbound/cache/: __init__.py
backend/src/app/adapters/outbound/llm/: __init__.py
backend/src/app/adapters/outbound/market_data/: __init__.py
backend/src/app/application/: __init__.py  commands.py  consumers.py  dtos.py  queries.py
backend/src/app/application/services/: __init__.py
backend/src/app/domain/: enums.py  exceptions.py
backend/src/app/domain/entities/: __init__.py
backend/src/app/domain/events/: __init__.py
backend/src/app/domain/services/: guardrails.py  risk_engine.py
backend/src/app/domain/value_objects/: __init__.py
backend/src/app/ports/: __init__.py  outbound.py
backend/src/app/shared/: __init__.py
backend/src/app/shared/errors/: __init__.py
backend/src/app/shared/middleware/: __init__.py
backend/src/app/shared/observability/: __init__.py  metrics.py
backend/src/app/shared/providers/: __init__.py  circuit_breaker.py  gateway.py  health.py  key_manager.py  quota.py  router.py  types.py
backend/src/app/shared/security/: __init__.py  rbac.py
backend/tests/: conftest.py  verify_providers_fix.py
backend/tests/integration/: test_api.py  test_user_auth_flow.py
backend/tests/unit/adapters/: test_broker_adapters.py
backend/tests/unit/application/: test_commands.py  test_queries.py
backend/tests/unit/domain/: __init__.py  test_entities.py  test_services.py  test_value_objects.py
backend/tests/unit/shared/: test_provider_resilience.py
(+43 files in other folders)
